@@ -2318,6 +2318,7 @@ struct reservedword c_keywords[] = {
     { "__builtin_alloca", C_BUILTIN_ALLOCA },
     { "__builtin_clz", C_BUILTIN_CLZ },
     { "__builtin_cogstart", C_BUILTIN_COGSTART },
+    { "__builtin_cogstart_cog", C_BUILTIN_COGSTART_COG },
     { "__builtin_expect", C_BUILTIN_EXPECT },
     { "__builtin_longjmp", C_BUILTIN_LONGJMP },
     { "__builtin_mulh",  C_BUILTIN_MULH },
