@@ -103,7 +103,8 @@ int       _coginit(int cog, void *pgm, void *ptr);
 
 /* start C code in another COG */
 #ifdef __FLEXC__
-#define _cogstart(func, arg, stack, size) __builtin_cogstart(func(arg), stack)
+#define _cogstart_cog(cognum, func, arg, stack, size) __builtin_cogstart_cog(cognum, func(arg), stack)
+#define _cogstart(func, arg, stack, size)             __builtin_cogstart(func(arg), stack)
 #else
 int _cogstart(void (*func)(void *), void *arg, void *stack_base, uint32_t stack_size);
 #endif
@@ -111,6 +112,7 @@ int _cogstart(void (*func)(void *), void *arg, void *stack_base, uint32_t stack_
 // alias used by Catalina
 #define _cogstart_PASM(cogid, pgm, arg)     _coginit(cogid, pgm, arg)
 #define _cogstart_C(func, arg, stack, size) _cogstart(func, arg, stack, size)
+#define _cogstart_C_cog(cognum, func, arg, stack, size) _cogstart_cog(cognum, func, arg, stack, size)
 
 /* stop/check status of COGs */
 void      _cogstop(int cog);
