@@ -2,6 +2,7 @@ Version 5.9.25
 - Added __P1__ macro defined only for P1 compiles
 - Added UMOUNT command for BASIC
 - Added an `inline` attribute to encourage functions to be inlined
+- Added _cogstart_cog and related defines to propeller2.h
 - Fixed ALIGNL in Spin2 VAR blocks
 - Improved some error messages
 - Made heap corruption code check depend on -g flag
